--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,3 +6,4 @@
     <h2>INSERTAR CONTENIDO</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, delectus.</p>
 </div>
+<app-category></app-category>
