--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,11 +1,11 @@
 <header>
-    <h3><img src="assets/img/logo_emergentes.jpg" alt="Logo" class="logo">Mi Página Web</h3>
+    <h3><img src="assets/img/logo_emergentes.jpg" alt="Logo" class="logo">{{ _information.info.titulo }}</h3>
     <nav>
         <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Portafolio</a></li>
+            <li><a routerLink="#">Principal</a></li>
             <li><a href="#">Blog</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="https://juego-hangman-hmg.netlify.app/">Jueguito</a></li>
+            <li><a href="#">Iniciar</a></li>
         </ul>
     </nav>
 </header>
