--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,3 +7,4 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, delectus.</p>
 </div>
 <app-category></app-category>
+<!-- <app-autos></app-autos> -->
