--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,2 +1,2 @@
-<h1>Página principal</h1>
-<button (click)="onClick()" class="btn btn-outline-danger mt-5">Logout</button>
+<!-- <h1>Página principal</h1>
+<button (click)="onClick()" class="btn btn-outline-danger mt-5">Logout</button> -->
