--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
     <nav>
         <ul>
             <li><a routerLink="#">Principal</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a routerLink="blog">Blog</a></li>
             <li><a href="https://juego-hangman-hmg.netlify.app/">Jueguito</a></li>
             <li><a href="#">Iniciar</a></li>
         </ul>
