--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="content">
-    <h2>Contenido Principal</h2>
-    <p>ESTA ES LA PAGINA PRINCIPAL</p>
+    <h2>Harold Maldonado</h2>
+    <p>Tecnologias Emergentes</p>
 </div>
 <div class="content">
     <h2>INSERTAR CONTENIDO</h2>
