--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -24,7 +24,7 @@ header img.logo {
 
 nav {
     display: flex;
-    background-color: azure;
+    /* background-color: azure; */
 }
 nav ul{
     display: flex;
@@ -48,6 +48,6 @@ nav a:hover {
 /* Estilos de la Imagen de Portada */
 .cover-image {
     width: 100%;
-    height: 50vh;
+    height: 20vh;
     background: url('../../../assets/img/img_porta.jpg') no-repeat center center/cover;
 }
